git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@229 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_new.html.haml
+++ b/app/views/management/sales_new.html.haml
@@ -1,6 +1,9 @@
 %h1=lc :title
 =sales_steps
-- if session[:sales][:nature].nil?
-  %h2.form=lc :nature
-- if session[:sales][:entity_id].nil?
-  %h2.form=lc :client
+=formalize do |f|
+  - if session[:sales][:nature].nil?
+    - f.title :nature
+    - f.field :sale, :nature
+  - if session[:sales][:entity_id].nil?
+    - f.title :client
+    - f.field :sale, :entity
