git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@231 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -22,5 +22,8 @@
   %h2= lc :parameters
   %ul
     %li=link_to lc(:products), {:action=>:products}
+    %li=link_to lc(:shelves), {:action=>:shelves}
+    %li=link_to lc(:units), {:action=>:units}
+    %li=link_to lc(:taxes), {:action=>:taxes}
 
 
