git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@233 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -14,6 +14,6 @@
 .action-list
   %h2= lc :parameters
   %ul
-    %li=link_to lc(:accounts), {:action=>:entries}
+    %li=link_to lc(:accounts), {:action=>:accounts}
     %li=link_to lc(:journals), {:action=>:journals}
     %li=link_to lc(:bank_accounts), {:action=>:bank_accounts}
