git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@246 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/financialyears_close.html.haml
+++ b/app/views/accountancy/financialyears_close.html.haml
@@ -3,5 +3,5 @@
   %table
     %tr
       %td.label=lc :financialyear_date
-      %td.input=text_field "financialyear", "stopped_on"
+      %td.input=select "financialyear", "stopped_on", @financialyear_periods
       %td.button=submit_tag 'ok', :html => {:tabindex => 2}     
