--- a/app/views/relations/index.html.haml
+++ b/app/views/relations/index.html.haml
@@ -1,2 +1,7 @@
-=link_to lc(:entities), :action=>:entities
-=link_to lc(:entities_create) , :action=>:entities_create
+%h1=lc :title
+
+.action-list
+  %h2= lc :entities
+  %ul
+    %li=link_to lc(:search_entities), :action=>:entities_search
+    %li=link_to lc(:create_entity), :action=>:entities_create
