git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@251 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -1,4 +1,4 @@
-=formalize(:inner_form=>true) do |f|
+=formalize do |f|
   - f.error :product
   - f.title :identification
   - f.field :product, :name
@@ -6,8 +6,8 @@
   - f.field :product, :code2
   - f.field :product, :ean13
   - f.title :nature
-  - f.field :product, :shelf_id, :choices=>@shelves.collect{|x| [x.name, x.id]}, :new=>{:action=>:shelves_create}
-  - f.field :product, :unit_id, :choices=>@units.collect{|x| [x.label, x.id]}
+  - f.field :product, :shelf_id, :choices=>@current_company.shelves.find(:all, :order=>:name).collect{|x| [x.name, x.id]}, :new=>{:action=>:shelves_create}
+  - f.field :product, :unit_id, :choices=>@current_company.units.find(:all, :order=>:label).collect{|x| [x.label, x.id]}
   - f.field :product, :active
   - f.field :product, :to_purchase
   - f.field :product, :to_sale
@@ -18,6 +18,6 @@
   - f.field :product, :description
   - f.field :product, :comment
   - f.title :accountancy
-  - f.field :product, :account_id, :choices=>@accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}
+  - f.field :product, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}
 =observe_field("product_name", :frequency =>0.25, :function => "var cn = $('product_catalog_name'); cn.value = value;")
 
