--- a/app/views/management/_products_search.html.haml
+++ b/app/views/management/_products_search.html.haml
@@ -1,6 +1,7 @@
 .search.action-list
-  %table
-    %tr
-      %td.label=lc(:search)
-      %td.field=text_field :search, :keyword
-      %td.submit=submit_tag l(:search_go)
+  - form_tag(:action=>:products) do
+    %table
+      %tr
+        %td.label=lc(:search)
+        %td.field=text_field :search, :keyword
+        %td.submit=submit_tag l(:search_go)
