git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@257 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_journals_close.html.haml
+++ b/app/views/accountancy/_journals_close.html.haml
@@ -1,1 +1,5 @@
-=@journal_closed.inspect
+=formalize(:inner_form=>true) do |f|
+  - f.error :journal
+  - f.title :title
+  - f.field :journal, :id, :choices => @journal.collect{|j| [j.name, j.id]} 
+
