--- a/app/views/accountancy/journals_close.html.haml
+++ b/app/views/accountancy/journals_close.html.haml
@@ -1,8 +1,14 @@
 %h1=lc(:title)
-- form_tag() do
-  %table
-    %tr
-      %td.label=lc :journal_date
-      %td.input=select "journal", "closed_on", @journal_periods
-      %td.button=submit_tag 'ok', :html => {:tabindex => 2}     
 
+.formalize
+  - form_tag do
+    .fields
+      =formalize do |f|
+        - f.error :journal
+        - f.title :title
+        - f.field :journal, :id, :choices => @journals.collect {|j| [j.name, j.id]}
+        - f.field :journal, :closed_on, :choices => @journal_periods
+    .actions
+      =submit_tag(l(:close))
+      =link_to(l(:cancel),:back)
+=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_periods}, :update=>:journal_closed_on, :with => "'journal=' + escape(value)"
