git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@259 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_new.html.haml
+++ b/app/views/management/sales_new.html.haml
@@ -1,9 +1,12 @@
 %h1=lc :title
 =sales_steps
-=formalize do |f|
-  - if session[:sales][:nature].nil?
-    - f.title :nature
-    - f.field :sale, :nature
-  - if session[:sales][:client_id].nil?
-    - f.title :client
-    - f.field :sale, :client
+- form_tag :do
+  =formalize do |f|
+    - if session[:sales][:nature].nil?
+      - f.title :nature
+      - f.field :sale, :nature
+    - if session[:sales][:client_id].nil?
+      - f.title :client
+      - f.field :sale, :client
+  .actions
+    =submit_tag lc :next
