--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,6 @@
 * {margin:0; padding:0; font-family: Arial, sans-serif;}
 html {background: #FFF;}
-td, a, p, input, textarea { font-size:13px;}
+td, th, a, p, input, textarea, select { font-size:13px;}
 a:link, a:visited, a:hover { color:#00C; }
 input[type="text"], input[type="password"], textarea { border:1px solid #aaa; background: #fff;}
 /*
@@ -143,15 +143,15 @@ div.td { display: table-cell; }
 #company div.side h3{ border-bottom :1px solid #BBB; margin: 10px 6px 2px; color:#555;}
 #company div.side .label {color:#777; width: 160px; text-align:right; padding: 2px;}
 #company div.side .value {color:#227;  padding: 2px;}
-#company .futo { padding: 2px 0px 10px; }
 
 .flash-error { padding: 10px; color: red; text-align:center; }
 
 table.formalize { border-collapse: collapse; margin-left: auto; margin-right: auto; }
-table.formalize td.label { text-align:right; padding:1px 4px; color: #008; width: 50%; border-right: 1px dotted #CCC; border-bottom:  1px dotted #CCC; }
-table.formalize td.input { padding:2px 6px 2px 2px;  border-bottom:  1px dotted #CCC; }
-table.formalize .notnull { border: 1px solid #33F; background: #eeF }
+table.formalize tr.field td { border-bottom:  1px dotted #CCC; }
+table.formalize td.label { text-align:right; padding:1px 4px; color: #008; width: 50%; border-right: 0px dotted #CCC;  }
+table.formalize td.input { padding:2px 6px 2px 2px; }
 table.formalize td.help  { text-align:left; padding:2px 2px 2px 6px; font-size: 11px; border-left:1px dashed #CCC;}
+table.formalize td .notnull { border: 1px solid #33F; background: #eeF }
 table.formalize td .info         { color: #007;  background:#CDF; padding:2px; }
 table.formalize td .info span    { color: #55C; }
 table.formalize td .example      { color: #040;  background:#CFC; padding:2px; }
@@ -176,20 +176,18 @@ table.formalize a.fastadd { margin: 0px 8px; }
 
 .futo .empty { text-align:center; color: #777; padding:4px;}
 
-h2.futo {margin:0; padding:16px 4px 4px 4px;}
-div.futo {padding:4px 2px; }
-div.futo h3 {padding:4px;color: #139; }
-div.futo > div {padding:0px;}
-div.futo .menu {padding:4px; background: #FEB; }
-div.futo .menu > a {padding: 4px;}
-/*div.futo .menu a.button:link, div.futo .menu a.button:visited, div.futo .menu a.button:hover { line-height: 27px;}*/
-/*div.futo .menu a, div.futo .menu a:link, div.futo .menu a:visited, div.futo .menu a:hover {color: white;}*/
-div.futo table.list {}
-div.futo table.list th, table.formu th { background: white url(/images/template/button.png) repeat-x bottom; padding:2px; color: #778;} /* border: 1px solid #55A;}*/
-div.futo table.list tr.odd  td {background: #E1E6FF;}
-div.futo table.list tr.even td {background: #F0F2FF;}
-div.futo table.list tr.data td {padding: 1px 3px;color: #007;} /*border: 1px solid #8AE;} */
-div.futo table.list tr td.act {background: #FDD; width:16px; }/*border: 1px solid #DAA;}*/
+h3.dyta {padding:4px;color: #139; font-size: 16px; }
+table.dyta { border-collapse: collapse; width: 100%; border-bottom: 1px solid #BACFE6;}
+table.dyta td.procedures { padding:4px; background: #FEB; }
+table.dyta td.procedures > a {padding: 4px;}
+table.dyta th { border-top: 1px solid #BACFE6; background: #e9f3fe url(/images/template/table_head.png) repeat-x bottom; padding:2px; color: #336; font-weight: bold; }
+table.dyta tr.odd  td {background: #E1E6FF;}
+table.dyta tr.even td {background: #F0F2FF;}
+table.dyta tr.data td {padding: 1px 3px;color: #007;}
+table.dyta tr.data td, table.dyta th { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
+table.dyta tr      td.act { width:16px; }
+table.dyta tr.odd  td.act { background: #FDD; }
+table.dyta tr.even td.act { background: #FED; }
 
 a.right { float:right; }
 
@@ -210,8 +208,8 @@ a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
 /* END */
 
 .action-list, .errorExplanation { -moz-border-radius: 12px; background: #E4EBF8; padding:8px; margin:12px 0px;}
-.action-list, .errorExplanation ul { padding: 8px 20px; }
-.action-list, .errorExplanation h2 { font-size : 16px; color: black;}
+.action-list ul, .errorExplanation ul { padding: 8px 20px; }
+.action-list h2, .errorExplanation h2 { font-size : 16px; color: black;}
 
 a.back { -moz-border-radius: 8px; padding:6px; margin:16px 0px; }
 
@@ -237,5 +235,6 @@ h2.form { font-size: 15px; margin: 8px 0px 4px; border-bottom: 1px solid #C9D7F1
 .errorExplanation { background: #ECA; color: #543; }
 
 
-input[type="text"], input[type="password"], textarea { margin:1px; border-width: 1px;}
-input[type="text"]:focus, input[type="password"]:focus, textarea:focus { border:2px solid #6ca !important; margin: 0px;}
+input[type="text"], input[type="password"], textarea, select { margin:1px; border-width: 1px; }
+input[type="text"]:focus, input[type="password"]:focus, textarea:focus, select:focus { border:2px solid #79e !important; margin: 0px;}
+input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea.invalid:focus, select.invalid:focus { border-color: red !important; }
